# astrill-split-proxy

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: astrill_split_proxy.py  default_config.json  gemini_api_proxy.py
src-tauri/src/: main.rs
